# projeto3-eng-dados-arquitetura-medalhao

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
bronze/: index.html
destruicao/: index.html
docs/: bronze.md  destruicao.md  gold.md  index.md  landing.md  preparacao.md  silver.md
docs/stylesheets/: extra.css:Zone.Identifier
gold/: index.html
notebooks/: 000_-_Atifidade_Pratica_-_Lakehouse_-_Preparando_ambiente-69fa4f0f2d7b1.ipynb  001_-_Atifidade_Pratica_-_Lakehouse_-_Preparando_ambiente-69fa4f0f2d7b1.ipynb  001_-_Atividade_Pratica_-_Lakehouse_-_Importando dados.ipynb  002_-_Atividade_Pratica_-_Lakehouse_-_Bronze-69fa4f0f35b55.ipynb  002_-_Atividade_Pratica_-_Lakehouse_-_Bronze.ipynb  002_-_Atividade_Pratica_-_Lakehouse_-_Importando_dados.ipynb  003_-_Atividade_Pratica_-_Lakehouse_-_Bronze.ipynb  003_-_Atividade_Pratica_-_Lakehouse_-_Silver-69fa4f0f39c3c.ipynb  003_-_Atividade_Pratica_-_Lakehouse_-_Silver.ipynb  004_-_Atividade_Pratica_-_Lakehouse_-_Gold-69fa4f0f6afff.ipynb  004_-_Atividade_Pratica_-_Lakehouse_-_Gold.ipynb  004_-_Atividade_Pratica_-_Lakehouse_-_Silver.ipynb  005_-_Atifidade_Pratica_-_Lakehouse_-_Destruindo_ambiente-69fa4f0f1bc85.ipynb  005_-_Atividade_Pratica_-_Lakehouse_-_Gold.ipynb  006_-_Atifidade_Pratica_-_Lakehouse_-_Destruindo_ambiente-69fa4f0f1bc85.ipynb  01_preparacao_ambiente:.ipynb  02_extracao_landing.ipynb  03_bronze_layer.ipynb  04_silver_layer.ipynb  05_gold_layer.ipynb  06_destruicao_ambiente.ipynb
preparacao/: index.html
search/: search_index.json
silver/: index.html
site/: sitemap.xml
(+3 files in other folders)
