[tool.poetry]
name = "projeto2-engenharia-dados-satc"
version = "0.1.0"
description = "Projeto Apache Spark com Delta Lake, MinIO e PostgreSQL"
readme = "README.md"
authors = [
    "Bruno Monteiro Bonifácio <brunombonifacio@gmail.com>",
    "Gianluca Andrade <email@exemplo.com>",
    "Luis Filipe Damiani Colombo <luismiani2@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
boto3 = ">=1.34.0"
delta-spark = "3.2.0"
jupyterlab = ">=4.2.5"
ipykernel = ">=6.29.0"
pandas = ">=2.2.0"
pyodbc = ">=5.1.0"
pyspark = "3.5.3"
python-dotenv = ">=1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
pymdown-extensions = "^10.8.1"
mkdocstrings = "0.24.0"
mkdocs-autorefs = "0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"